--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nお迎え先：${formData.message1}\nお帰り先：${formData.message2}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message3}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\n予約：仮予約\n\nお迎え先：\n ${formData.message1}\n\nお帰り先：\n ${formData.message2}\n\n希望日時：\n ${formData.dates[0]}\n\nメッセージ：\n${formData.message3}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
