--- a/index.html
+++ b/index.html
@@ -710,10 +710,10 @@
         <div class="info-text">※電話番号の入力に誤りがないようにお願いいたします。</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="labelContent">お迎え先(必須)<br>※駐車場が未定の場合は、未定とご入力下さい。</div>
+        <div class="labelContent">お迎え先(必須)<br>※駐車場が未定の場合は、未定とご入力下さい。<span class="required">必須</span></div>
         <textarea id="message1" rows="4" placeholder="お迎え先の施設名や住所をご入力下さい。"></textarea>
 
-        <div class="labelContent">お帰り先(必須)<br>お帰りの先の施設名や住所をご入力下さい。<br>※場所の詳細がわからない場合は未定とご入力下さい。</div>
+        <div class="labelContent">お帰り先(必須)<br>お帰りの先の施設名や住所をご入力下さい。<br>※場所の詳細がわからない場合は未定とご入力下さい。<span class="required">必須</span></div>
         <textarea id="message2" rows="4" placeholder="お帰りの先の施設名や住所をご入力下さい。"></textarea>
 
         <div class="label">希望日時<span class="required">必須</span></div>
@@ -861,17 +861,17 @@
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="color:#005ea6;"><strong>【お名前】</strong></span><br>・${phone}</p>
+            <p><span style="color:#005ea6;"><strong>【電話番号】</strong></span><br>・${phone}</p>
             <button class="edit-button" onclick="scrollToElement('phone')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="color:#005ea6;"><strong>お迎え先</strong></span><br>・${message1}</p>
+            <p><span style="color:#005ea6;"><strong>【お迎え先】</strong></span><br>・${message1}</p>
             <button class="edit-button" onclick="scrollToElement('message1')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="color:#005ea6;"><strong>お帰り先</strong></span><br>・${message2}</p>
+            <p><span style="color:#005ea6;"><strong>【お帰り先】</strong></span><br>・${message2}</p>
             <button class="edit-button" onclick="scrollToElement('message2')">修正する</message2>
         </div>
         <hr>
@@ -944,7 +944,7 @@
             const date = new Date(selectedDay);
 
             // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
-            selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
+            selectedFullDate = `${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
 
             // 希望日時を即座に更新
             updateDisplayInfo();
