--- a/index.html
+++ b/index.html
@@ -986,13 +986,21 @@
                 return;
             }
 
-// QRコード生成用のURL
-const phoneUrl = `https://api.qrserver.com/v1/create-qr-code/?data=tel:${formData.phone}&size=200x200`;
+// 電話番号の整形関数
+function formatPhoneNumber(phone) {
+    return phone.replace(/(\d{3})(\d{4})(\d{4})/, '$1-$2-$3');
+}
 
 // LINEトークにメッセージを送信
 liff.sendMessages([{
     type: 'text',
-    text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号（QRコード）：\n${formData.phone}\n${phoneUrl}\n\n予約：仮予約\n\nお迎え先：\n${formData.message1}\n\nお帰り先：\n${formData.message2}\n\n希望日時：\n${formData.dates[0]}\n\nメッセージ：\n${formData.message3}`
+    text: `【予約フォーム】\nお名前：${formData.name}\n\n` +
+          `📞 電話番号：<a href="tel:${formData.phone}">${formatPhoneNumber(formData.phone)}</a>\n\n` +
+          `予約：仮予約\n\n` +
+          `お迎え先：\n${formData.message1}\n\n` +
+          `お帰り先：\n${formData.message2}\n\n` +
+          `希望日時：\n${formData.dates[0]}\n\n` +
+          `メッセージ：\n${formData.message3}`
 }]).then(() => {
     /* メッセージ送信成功時の処理 */
     alert('当日キャンセルは無いようにお願いいたします。');
@@ -1002,7 +1010,6 @@ liff.sendMessages([{
     /* メッセージ送信失敗時の処理 */
     console.error('メッセージの送信に失敗しました', err);
 });
-
         }
 
         function formatDate(dateStr) {
