--- a/index.html
+++ b/index.html
@@ -992,16 +992,12 @@ function formatPhoneNumber(phone) {
 }
 
 // LINEトークにメッセージを送信
-liff.sendMessages([{
-    type: 'text',
-    text: `【予約フォーム】\nお名前：${formData.name}\n\n` +
-          `📞 電話番号：<a href="tel:${formData.phone}">${formatPhoneNumber(formData.phone)}</a>\n\n` +
-          `予約：仮予約\n\n` +
-          `お迎え先：\n${formData.message1}\n\n` +
-          `お帰り先：\n${formData.message2}\n\n` +
-          `希望日時：\n${formData.dates[0]}\n\n` +
-          `メッセージ：\n${formData.message3}`
-}]).then(() => {
+liff.sendMessages([
+    {
+        type: 'text',
+        text: `【予約フォーム】\nお名前：${formData.name}\n\n📞電話をかける → [こちらをタップ](https://api.whatsapp.com/send?phone=+81${formData.phone.replace(/^0/, '')})\n\n予約：仮予約\n\nお迎え先：\n${formData.message1}\n\nお帰り先：\n${formData.message2}\n\n希望日時：\n${formData.dates[0]}\n\nメッセージ：\n${formData.message3}`
+    }
+]).then(() => {
     /* メッセージ送信成功時の処理 */
     alert('当日キャンセルは無いようにお願いいたします。');
     /* LIFFウィンドウを閉じる */
