--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
 
         <div class="label">ご紹介の場合は紹介者様の<br>お名前をご入力ください</div>
-        <input type="tel" id="introduction" placeholder="紹介者様のお名前">
+        <input type="text" id="introduction" placeholder="紹介者様のお名前">
 
         <div class="label" id="course">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
