--- a/index.html
+++ b/index.html
@@ -471,11 +471,11 @@
             <span class="highlight-text">オプション</span>
         </div>
         <div class="irradiations">
-            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="5500">カット（S・B込み）￥5,500</button>
-            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="3300">小学生カット ￥3,300</button>
-            <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="132000">カット&カラー ￥13,200</button>
-            <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="8800">ワンメイク（全体）カラー（S・B込み）￥8,800</button>
-            <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="2750">キッズカット（小学生未満）￥2,750</button>
+            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="5500">【オプション】<br>カット（S・B込み）￥5,500</button>
+            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="3300">【オプション】<br>小学生カット ￥3,300</button>
+            <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="132000">【オプション】<br>カット&カラー ￥13,200</button>
+            <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="8800">【オプション】<br>ワンメイク（全体）カラー（S・B込み）￥8,800</button>
+            <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="2750">【オプション】<br>キッズカット（小学生未満）￥2,750</button>
         </div>
 
         <div class="label">希望日時</div>
@@ -553,11 +553,11 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            'カット（S・B込み）￥5,500': 60,
-            '小学生カット ￥3,300': 30,
-            'カット&カラー ￥13,200': 120,
-            'ワンメイク（全体）カラー（S・B込み）￥8,800': 60,
-            'キッズカット（小学生未満）￥2,750': 30
+            '【オプション】カット（S・B込み）￥5,500': 60,
+            '【オプション】小学生カット ￥3,300': 30,
+            '【オプション】カット&カラー ￥13,200': 120,
+            '【オプション】ワンメイク（全体）カラー（S・B込み）￥8,800': 60,
+            '【オプション】キッズカット（小学生未満）￥2,750': 30
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
